--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
         <h1>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h1>
 
-<p><a href="http://codeforamerica.github.io/infrastructure-hub">### Atlanta Infrastructure Hub (Code for America)</a>
-A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see. </p>
+<h3>
+<a id="atlanta-infrastructure-hub-code-for-america" class="anchor" href="#atlanta-infrastructure-hub-code-for-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atlanta Infrastructure Hub (Code for America)]</h3>
+
+<p><a href="http://codeforamerica.github.io/infrastructure-hub">http://codeforamerica.github.io/infrastructure-hub</a></p>
+
+<p><img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub"></p>
+
+<p>A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see. </p>
+
+<h3>
+<a id="atlanta-infrastructure-hub---map-version-code-for-america" class="anchor" href="#atlanta-infrastructure-hub---map-version-code-for-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atlanta Infrastructure Hub - Map Version (Code for America)]</h3>
+
+<p><a href="http://reveillette.github.io/infrastructure-hub-map">http://reveillette.github.io/infrastructure-hub-map</a></p>
+
+<p><img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version"></p>
 
 <h3>
 <a id="mapping-paris" class="anchor" href="#mapping-paris" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mapping Paris</h3>
