Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p><img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub"></p>
 
-<p>A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see. </p>
+<p>A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see.  </p>
 
 <h3>
 <a id="atlanta-infrastructure-hub---map-version-code-for-america" class="anchor" href="#atlanta-infrastructure-hub---map-version-code-for-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atlanta Infrastructure Hub - Map Version (Code for America)]</h3>
@@ -42,36 +42,31 @@
 
 <p><img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version"></p>
 
-<h3>
-<a id="mapping-paris" class="anchor" href="#mapping-paris" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mapping Paris</h3>
+<p>The same as above, but with a map-based interface. </p>
 
 <hr>
 
 <h1>
 <a id="visualizations" class="anchor" href="#visualizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Visualizations</h1>
 
+<h3>
+<a id="mapping-paris" class="anchor" href="#mapping-paris" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mapping Paris</h3>
+
+<p><a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a></p>
+
+<p><img src="http://reveillette.github.io/images/mapping-paris.png" alt="Mapping Paris"></p>
+
+<p>I spent the summer of 2008 in Paris. During the trip (this was before I had an iPhone), I used the Michelin Paris Pocket Atlas (no longer in print, sadly), a spiral-bound book with detailed maps of every district. I wanted to keep track of the places I had visited and, enamored at the time with Guy Debord, also the routes I had taken to get there. When I came home, I digitized these pages to make a composite map which showed the ins and outs of my entire stay in the City of Light. This became the vehicle for connecting myriad travel photos with a map, and allowed me to explore a means of expanding and emphasizing certain moments with annotated video. While the project's use of Flash and "manual" geocoding are certainly obsolete now in the age of smartphones, Google Maps, Leaflet, and geotagged photos, the project retains a certain analog charm for me. </p>
+
+<hr>
+
 <h1>
 <a id="workshops" class="anchor" href="#workshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshops</h1>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="web-maps-nacis-2014-pittsburgh" class="anchor" href="#web-maps-nacis-2014-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web Maps (NACIS 2014, Pittsburgh)</h3>
 
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
