--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 <h3>
 <a id="web-maps-nacis-2014-pittsburgh" class="anchor" href="#web-maps-nacis-2014-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web Maps (NACIS 2014, Pittsburgh)</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p><a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a></p>
+
+<p>An two-hour workshop introducing participants to making web maps using Google Fusion Tables, TileMill, and Leaflet. Repo includes tutorials and sample files, as well as presentations covering different kinds of web map tools and data resources.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
