--- a/index.html
+++ b/index.html
@@ -23,52 +23,41 @@
 
       </header>
       <section>
-        <h1>
-<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h1>
 
-<h3>
-<a id="atlanta-infrastructure-hub-code-for-america" class="anchor" href="#atlanta-infrastructure-hub-code-for-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atlanta Infrastructure Hub (Code for America)]</h3>
+<h1><a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h1>
+<br/>
 
-<p><a href="http://codeforamerica.github.io/infrastructure-hub">http://codeforamerica.github.io/infrastructure-hub</a></p>
-
-<p><img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub"></p>
-
+<h3>Atlanta Infrastructure Hub (Code for America)]</h3>
+<a href="http://codeforamerica.github.io/infrastructure-hub">http://codeforamerica.github.io/infrastructure-hub</a>
+<img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub">
 <p>A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see.  </p>
 
-<h3>
-<a id="atlanta-infrastructure-hub---map-version-code-for-america" class="anchor" href="#atlanta-infrastructure-hub---map-version-code-for-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atlanta Infrastructure Hub - Map Version (Code for America)]</h3>
-
-<p><a href="http://reveillette.github.io/infrastructure-hub-map">http://reveillette.github.io/infrastructure-hub-map</a></p>
-
-<p><img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version"></p>
-
+<h3>Atlanta Infrastructure Hub - Map Version (Code for America)</h3>
+<a href="http://reveillette.github.io/infrastructure-hub-map">http://reveillette.github.io/infrastructure-hub-map</a>
+<img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version">
 <p>The same as above, but with a map-based interface.  </p>
 
+<br/>
 <hr>
 
-<h1>
-<a id="visualizations" class="anchor" href="#visualizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Visualizations</h1>
+<h1>Visualizations</h1>
+<br/>
 
-<h3>
-<a id="mapping-paris" class="anchor" href="#mapping-paris" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mapping Paris</h3>
-
-<p><a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a></p>
-
-<p><img src="http://reveillette.github.io/images/mapping-paris.png" alt="Mapping Paris"></p>
-
+<h3>Mapping Paris</h3>
+<a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a>
+<img src="http://reveillette.github.io/images/mapping-paris.png" alt="Mapping Paris">
 <p>I spent the summer of 2008 in Paris. During the trip (this was before I had an iPhone), I used the Michelin Paris Pocket Atlas (no longer in print, sadly), a spiral-bound book with detailed maps of every district. I wanted to keep track of the places I had visited and, enamored at the time with Guy Debord, also the routes I had taken to get there. When I came home, I digitized these pages to make a composite map which showed the ins and outs of my entire stay in the City of Light. This became the vehicle for connecting myriad travel photos with a map, and allowed me to explore a means of expanding and emphasizing certain moments with annotated video. While the project's use of Flash and "manual" geocoding are certainly obsolete now in the age of smartphones, Google Maps, Leaflet, and geotagged photos, the project retains a certain analog charm for me.  </p>
 
+<br/>
 <hr>
 
-<h1>
-<a id="workshops" class="anchor" href="#workshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workshops</h1>
+<h1>Workshops</h1>
+<br/>
 
-<h3>
-<a id="web-maps-nacis-2014-pittsburgh" class="anchor" href="#web-maps-nacis-2014-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web Maps (NACIS 2014, Pittsburgh)</h3>
-
-<p><a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a></p>
-
+<h3>Web Maps (NACIS 2014, Pittsburgh)</h3>
+<a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a>
 <p>An two-hour workshop introducing participants to making web maps using Google Fusion Tables, TileMill, and Leaflet. Repo includes tutorials and sample files, as well as presentations covering different kinds of web map tools and data resources.</p>
+      
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
