--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
 <br/>
 
 <h3>Atlanta Infrastructure Hub (Code for America)]</h3>
-<a href="http://codeforamerica.github.io/infrastructure-hub">http://codeforamerica.github.io/infrastructure-hub</a>
+<a href="http://codeforamerica.github.io/infrastructure-hub"><img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub"></a>
 <br/>
-<img src="http://reveillette.github.io/images/infrastructure-hub.png" alt="Atlanta Infrastructure Hub">
+
 <p>A project created during my time as a Code for America Fellow for the City of Atlanta in 2014, the Atlanta Infrastructure Hub is a web portal where Atlanta citizens could get information about a planned $250 million infrastructure bond measure to improve the condition of roads and sidewalks in the city. In addition to providing information about the bond measure, the site allowed citizens to see planned infrastructure improvements in their neighborhood, as well as to vote on the types of infrastructure projects they would most like to see.  </p>
 <br/>
 
 <h3>Atlanta Infrastructure Hub - Map Version (Code for America)</h3>
-<a href="http://reveillette.github.io/infrastructure-hub-map">http://reveillette.github.io/infrastructure-hub-map</a>
+<a href="http://reveillette.github.io/infrastructure-hub-map"><img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version"></a>
 <br/>
-<img src="http://reveillette.github.io/images/infrastructure-hub-map.png" alt="Atlanta Infrastructure Hub - Map Version">
 <p>The same as above, but with a map-based interface.  </p>
 
 <br/>
@@ -47,9 +46,9 @@
 <br/>
 
 <h3>Mapping Paris</h3>
-<a href="http://reveillette.github.io/mapping-paris">http://reveillette.github.io/mapping-paris</a>
+<a href="http://reveillette.github.io/mapping-paris"><img src="http://reveillette.github.io/images/mapping-paris.png" alt="Mapping Paris"></a>
 <br/>
-<img src="http://reveillette.github.io/images/mapping-paris.png" alt="Mapping Paris">
+
 <p>I spent the summer of 2008 in Paris. During the trip (this was before I had an iPhone), I used the Michelin Paris Pocket Atlas (no longer in print, sadly), a spiral-bound book with detailed maps of every district. I wanted to keep track of the places I had visited and, enamored at the time with Guy Debord, also the routes I had taken to get there. When I came home, I digitized these pages to make a composite map which showed the ins and outs of my entire stay in the City of Light. This became the vehicle for connecting myriad travel photos with a map, and allowed me to explore a means of expanding and emphasizing certain moments with annotated video. While the project's use of Flash and "manual" geocoding are certainly obsolete now in the age of smartphones, Google Maps, Leaflet, and geotagged photos, the project retains a certain analog charm for me.  </p>
 
 <br/>
